# dinov3

./: .gitignore  pyproject.toml  todo
dinov3/configs/: ssl_default_config.yaml
dinov3/configs/train/: vitb_im1k.yaml
dinov3/configs/train/cp/: vitb_im1k.yaml  vitb_im1k_breastmnist.yaml  vitb_lvd1689m_breastmnist.yaml
dinov3/data/: augmentations.py  loaders.py  transforms.py
dinov3/data/datasets/: __init__.py  cp_datasets.py
dinov3/loaders/: __init__.py  huggingface_loader.py
dinov3/train/: ssl_meta_arch.py
