[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dinov3"
version = "0.0.1"
description = "DINOv3"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE.md"}
authors = [
    {name = "Meta AI Research, FAIR"},
]
keywords = [
    "computer vision",
    "self-supervised learning",
    "vision transformers",
    "representation learning",
    "deep learning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "ftfy",
    "iopath",
    "omegaconf",
    "pandas",
    "regex",
    "scikit-learn",
    "scikit-learn-intelex",
    "submitit",
    "termcolor",
    "torch",
    "torchmetrics",
    "torchvision",
]

[project.optional-dependencies]
dev = [
    "docstr-coverage==2.3.2",
    "mypy[reports]==1.17",
    "pylint==3.3.8",
    "ruff==0.12.8",
]
cp = [
    "datasets<4.0.0",
    "huggingface-hub",
    "tqdm",
    "medmnist",
]

[project.urls]
Homepage = "https://ai.meta.com/dinov3/"
Repository = "https://github.com/facebookresearch/dinov3"
Documentation = "https://ai.meta.com/dinov3/"
"Bug Tracker" = "https://github.com/facebookresearch/dinov3/issues"

[tool.setuptools.packages.find]
include = ["dinov3*"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
files = "dinov3"
exclude = '''(?x)(
  ^dinov3/tests/([^/]+/)*test_.*\.py$  # Unit tests
)'''

[tool.pylint.master]
persistent = false
score = false

[tool.pylint.messages_control]
disable = "all"
enable = [
  "miscellaneous",
  "similarities",
]

[tool.pylint.similarities]
ignore-comments = true
ignore-docstrings = true
ignore-imports = true
min-similarity-lines = 8

[tool.pylint.reports]
reports = false

[tool.pylint.miscellaneous]
notes = [
  "FIXME",
  "XXX",
  "TODO",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
ignore = ["E203", "E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"hubconf.py" = ["F401"]
